--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -133,11 +133,81 @@
                     <connections>
                         <outlet property="clearButton" destination="Dec-5I-qYs" id="ZoN-cx-qJh"/>
                         <outlet property="spinner" destination="hPL-ZB-VEg" id="mOz-Gh-gyL"/>
+                        <segue destination="gs2-2D-lF2" kind="show" identifier="showProductDetails" id="IJz-sd-NNT"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0dk-Ze-oN5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="847.20000000000005" y="22.938530734632685"/>
+        </scene>
+        <!--Product Details View Controller-->
+        <scene sceneID="hbe-mJ-wJA">
+            <objects>
+                <viewController id="gs2-2D-lF2" customClass="ProductDetailsViewController" customModule="ProductCatalog" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="C97-sZ-1KR"/>
+                        <viewControllerLayoutGuide type="bottom" id="xHu-H8-UEP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aSw-ee-z8g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NTM-rL-VVP">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="Mgl-5D-NxW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QFo-Jv-CmR">
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rm5-tc-Lbc">
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aME-eb-G2T">
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GKC-mY-hJi">
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GKC-mY-hJi" firstAttribute="trailing" secondItem="aSw-ee-z8g" secondAttribute="trailingMargin" id="Cpy-h7-uiJ"/>
+                            <constraint firstItem="aME-eb-G2T" firstAttribute="leading" secondItem="aSw-ee-z8g" secondAttribute="leadingMargin" id="Fwa-NH-EXA"/>
+                            <constraint firstItem="rm5-tc-Lbc" firstAttribute="leading" secondItem="aSw-ee-z8g" secondAttribute="leadingMargin" id="HpT-3x-NeC"/>
+                            <constraint firstItem="NTM-rL-VVP" firstAttribute="top" secondItem="C97-sZ-1KR" secondAttribute="bottom" id="NvL-bE-aaS"/>
+                            <constraint firstItem="aME-eb-G2T" firstAttribute="trailing" secondItem="aSw-ee-z8g" secondAttribute="trailingMargin" id="OMl-FW-XqY"/>
+                            <constraint firstItem="rm5-tc-Lbc" firstAttribute="trailing" secondItem="aSw-ee-z8g" secondAttribute="trailingMargin" id="SGE-5f-bE3"/>
+                            <constraint firstItem="rm5-tc-Lbc" firstAttribute="top" secondItem="QFo-Jv-CmR" secondAttribute="bottom" constant="8" id="XZm-oE-bNL"/>
+                            <constraint firstItem="aME-eb-G2T" firstAttribute="top" secondItem="rm5-tc-Lbc" secondAttribute="bottom" constant="5" id="Xiw-JZ-KX3"/>
+                            <constraint firstItem="GKC-mY-hJi" firstAttribute="leading" secondItem="aSw-ee-z8g" secondAttribute="leadingMargin" id="cB1-rj-Sty"/>
+                            <constraint firstItem="QFo-Jv-CmR" firstAttribute="trailing" secondItem="aSw-ee-z8g" secondAttribute="trailingMargin" id="d1G-uM-RbF"/>
+                            <constraint firstItem="QFo-Jv-CmR" firstAttribute="top" secondItem="NTM-rL-VVP" secondAttribute="bottom" constant="8" id="gJu-gc-HMB"/>
+                            <constraint firstItem="GKC-mY-hJi" firstAttribute="top" secondItem="aME-eb-G2T" secondAttribute="bottom" constant="4" id="jis-EB-uYg"/>
+                            <constraint firstAttribute="trailing" secondItem="NTM-rL-VVP" secondAttribute="trailing" id="lbA-j4-3ql"/>
+                            <constraint firstItem="NTM-rL-VVP" firstAttribute="leading" secondItem="aSw-ee-z8g" secondAttribute="leading" id="wbp-15-dud"/>
+                            <constraint firstItem="QFo-Jv-CmR" firstAttribute="leading" secondItem="aSw-ee-z8g" secondAttribute="leadingMargin" id="xIl-7i-Nox"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="brandLabel" destination="rm5-tc-Lbc" id="iXd-kz-SaI"/>
+                        <outlet property="descriptionLabel" destination="GKC-mY-hJi" id="OUz-Vk-rFC"/>
+                        <outlet property="imageView" destination="NTM-rL-VVP" id="0sd-ud-bkm"/>
+                        <outlet property="nameLabel" destination="QFo-Jv-CmR" id="0O3-m2-SoZ"/>
+                        <outlet property="priceLabel" destination="aME-eb-G2T" id="au8-VM-IE6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hon-L5-tfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1615.2" y="21.139430284857571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="E8Q-Wm-2da">
