--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <collectionViewController id="JIp-AI-YDs" customClass="ProductsViewController" customModule="ProductCatalog" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="3FB-Np-aQA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="aU1-Fw-oxz">
@@ -23,7 +23,7 @@
                             <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                         </collectionViewFlowLayout>
                         <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" id="hPL-ZB-VEg">
-                            <rect key="frame" x="0.0" y="-64" width="414" height="736"/>
+                            <rect key="frame" x="0.0" y="-64" width="375" height="667"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="color" red="1" green="0.87058823529999996" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                         </activityIndicatorView>
@@ -86,7 +86,7 @@
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductHeader" id="eyo-ct-B3H" customClass="ProductHeaderView" customModule="ProductCatalog" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="73"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="O9B-pb-aiS">
@@ -150,7 +150,7 @@
                         <viewControllerLayoutGuide type="bottom" id="xHu-H8-UEP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="aSw-ee-z8g">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NTM-rL-VVP">
@@ -348,9 +348,17 @@
                         <viewControllerLayoutGuide type="bottom" id="PVB-An-G5R"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tVh-9a-Vmq">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88A-0z-1f0">
+                                <state key="normal" title="Close">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="closeView:" destination="GU6-Le-KgF" eventType="touchUpInside" id="PW1-r4-3aA"/>
+                                </connections>
+                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NR2-VQ-xZk">
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GVZ-xQ-SMf"/>
@@ -367,13 +375,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="88A-0z-1f0" secondAttribute="trailing" constant="8" id="44N-Y7-dQe"/>
                             <constraint firstItem="PVB-An-G5R" firstAttribute="top" secondItem="NR2-VQ-xZk" secondAttribute="bottom" id="C5j-4y-iaZ"/>
+                            <constraint firstItem="88A-0z-1f0" firstAttribute="top" secondItem="GAL-Br-uJo" secondAttribute="bottom" constant="8" id="GFc-Zg-e2b"/>
                             <constraint firstItem="NR2-VQ-xZk" firstAttribute="leading" secondItem="tVh-9a-Vmq" secondAttribute="leading" id="M4n-Uh-brj"/>
                             <constraint firstAttribute="trailing" secondItem="NR2-VQ-xZk" secondAttribute="trailing" id="rNr-qN-LIH"/>
                             <constraint firstItem="NR2-VQ-xZk" firstAttribute="top" secondItem="GAL-Br-uJo" secondAttribute="bottom" id="s9I-dz-x11"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="closeButton" destination="88A-0z-1f0" id="9hc-ti-cZb"/>
                         <outlet property="imageView" destination="GVZ-xQ-SMf" id="OJw-DH-yOR"/>
                         <outlet property="scrollView" destination="NR2-VQ-xZk" id="DKx-kE-2FQ"/>
                     </connections>
