--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="KR8-Xp-EJs">
             <objects>
                 <collectionViewController id="JIp-AI-YDs" customClass="ProductsViewController" customModule="ProductCatalog" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="3FB-Np-aQA">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="3FB-Np-aQA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -22,11 +22,6 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                         </collectionViewFlowLayout>
-                        <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" id="hPL-ZB-VEg">
-                            <rect key="frame" x="0.0" y="-64" width="375" height="667"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="color" red="1" green="0.87058823529999996" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
-                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Nyi-Fe-cEE" customClass="ProductCell" customModule="ProductCatalog" customModuleProvider="target">
                                 <rect key="frame" x="5" y="78" width="170" height="160"/>
@@ -133,7 +128,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="clearButton" destination="Dec-5I-qYs" id="ZoN-cx-qJh"/>
-                        <outlet property="spinner" destination="hPL-ZB-VEg" id="mOz-Gh-gyL"/>
                         <segue destination="gs2-2D-lF2" kind="show" identifier="showProductDetails" id="IJz-sd-NNT"/>
                     </connections>
                 </collectionViewController>
@@ -399,6 +393,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cancel" width="17" height="17"/>
+        <image name="cancel" width="52" height="52"/>
     </resources>
 </document>
